Few fixes to document

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -227,4 +227,18 @@
     journal={Journal of Antimicrobial Chemotherapy},
     year={2011},
     pages={742-748}
+},
+
+@article{mcfarland,
+    doi = {10.1038/ncpgasthep1029},
+    url = {http://dx.doi.org/10.1038/ncpgasthep1029},
+    year  = {2008},
+    month = {jan},
+    publisher = {Nature Publishing Group},
+    volume = {5},
+    number = {1},
+    pages = {40--48},
+    author = {Lynne V McFarland},
+    title = {Update on the changing epidemiology of Clostridium difficile-associated disease},
+    journal = {Nature Clinical Practice Gastroenterology \& Hepatology}
 }
