--- a/doc/project.Rmd
+++ b/doc/project.Rmd
@@ -8,12 +8,12 @@ author:
 date: "`r format(Sys.time(), '%d %B %Y')`"
 bibliography: bibliography.bib
 abstract: |
-  **Objective —** In “Epidemiological Model for *Clostridium Difficile* Transmission in Health-Care Settings,” published by @lanzas, the authors developed a compartmental mathematical model of *C. difficile* nosocomial transmission (the “*Lanzas* model”). The paper highlights the importance of patient-patient transmission to *C. difficile* burden in hospital settings, as the authors found that the transmission coefficients associated with colonized and/or symptomatically diseased patients were significant drivers of whether R0 was greater or less than 1. Since publication, however, fecal transplantation to restore endogenous flora has gained increasing acceptance as a curative therapy for *C. difficile*. To date, the majority of attention has focused on fecal transplantation’s clinical implications, but it also fundamentally alters susceptibility and recovery rates relative to conventional antibiotic-based regimens. These rates are directly relevant to *C.  difficile* transmission dynamics, in particular transmission from symptomatically diseased patients, but to our knowledge have not been modeled in the literature. Our objective was to update the *Lanzas* model to incorporate fecal transplant as an alternative to antibiotic treatment in order to evaluate resulting effects on *C. difficile* hospital-based transmission.  
+  **Objective —** In “Epidemiological Model for *Clostridium Difficile* Transmission in Health-Care Settings,” published by @lanzas, the authors developed a compartmental mathematical model of *C. difficile* nosocomial transmission (the “*Lanzas* model”). The paper highlights the importance of patient-to-patient transmission to *C. difficile* burden in hospital settings, as the authors found that the transmission coefficients associated with colonized and/or symptomatically diseased patients were significant drivers of whether R0 was greater or less than 1. Since publication, however, fecal transplantation to restore endogenous flora has gained increasing acceptance as a curative therapy for *C. difficile*. To date, the majority of attention has focused on fecal transplantation’s clinical implications, but it also fundamentally alters susceptibility and recovery rates relative to conventional antibiotic-based regimens. These rates are directly relevant to *C.  difficile* transmission dynamics, in particular to transmission from symptomatically diseased patients, but have not been modeled in the literature. Our objective was to update the *Lanzas* model to incorporate fecal transplant as an alternative to antibiotic treatment in order to evaluate resulting effects on *C. difficile* hospital-based transmission.  
   **Design —** Retrospective cohort.  
   **Setting and Patients —** All patients admitted to the medical wards at a large tertiary care hospital in the United States between January 1 and December 31, 2008 (underlying study cohort of Lanzas).  
-  **Methods —** The *Lanzas* model was modified to include fecal transplant, in addition to antibiotic therapy, as treatment for *C.  difficile* infection (CDI). To incorporate fecal transplant, we altered the original model in two primary ways: (1) Collapse of the two asymptomatically colonized states, C^-^ and C^+^ (with and without protection against CDI), into a single colonized state, C; and (2) Expansion of the single “susceptible to colonization” state, S, into separate compartments: “susceptible to colonization following antibiotic treatment” (S~a~) and “susceptible to colonization following fecal transplant” (S~f~). The modified model includes five possible transition states: resistant to colonization (R), susceptible to colonization following antibiotic therapy (S~a~), susceptible to colonization following fecal transplant (S~f~), asymptomatically colonized (C), and patients with symptomatic disease (D). The addition of new parameters to reflect fecal transplant-associated transition rates among compartments were derived from the literature.  
-  **Results -** Incorporating fecal transplant as a treatment for recurrent or refractory CDI reduced the basic reproductive number of _C. difficile_ in hospital settings by approximately 10%, to 1.13.  Estimations of R0 were sensitive to fecal transplant-related parameters, with a "best case" scenario yielding an R0 of 1.03.  Stochastic simulations also identified an approximately 10% reduction in attack rate associated with fecal transplant uptake under current clinical treatment guidelines.  
-  **Conclusion -** Our study suggests that fecal transplantation as a curative therapy for _C. difficile_ infection may yield currently unrecognized transmission reduction benefits in addition to its well-publicized clinical utility.  Although the transmission effects were modest and did not ultimately shift R0 below 1, reductions of 10-20% in R0 as we observed may nevertheless be meaningful in a landscape in which resulting CDI-associated morbidity and mortality are high.  These reductions may also be significant enough to reduce the probability of outbreaks in hospital settings, which is an important future investigation.  Ultimately, understanding the transmission effects of fecal transplant is timely, because widespread adoption of fecal transplantation has been hampered by practical and legal constraints.  Our evidence may have relevance to regulatory bodies and hospitals as they consider further uptake of fecal transplantation as a treatment alternative in CDI patients. 
+  **Methods —** The *Lanzas* model was modified to include fecal transplant, in addition to antibiotic therapy, as treatment for *C.  difficile* infection (CDI). To incorporate fecal transplant, we altered the original model in two primary ways: (1) Collapse of the two asymptomatically colonized states, C^-^ and C^+^ (with and without protection against CDI), into a single colonized state, C; and (2) Expansion of the single “susceptible to colonization” state, S, into separate compartments: “susceptible to colonization following antibiotic treatment” (S~a~) and “susceptible to colonization following fecal transplant” (S~f~). The modified model includes five possible transition states: resistant to colonization (R), susceptible to colonization following antibiotic therapy (S~a~), susceptible to colonization following fecal transplant (S~f~), asymptomatically colonized (C), and patients with symptomatic disease (D). The new parameters to reflect fecal transplant-associated transition rates among compartments were derived from the literature.  
+  **Results -** Incorporating fecal transplant as a treatment for recurrent or refractory CDI reduced the basic reproductive number of _C. difficile_ in hospital settings by approximately 10%, to 1.13.  Estimations of R0 were sensitive to fecal transplant-related parameters, with a "best-case" scenario yielding an R0 of 1.03.  Stochastic simulations also identified an approximately 10% reduction in attack rate associated with fecal transplant uptake under current clinical treatment guidelines.  
+  **Conclusion -** Our study suggests that fecal transplantation as a curative therapy for _C. difficile_ infection may yield heretofor unrecognized transmission reduction benefits in addition to its well publicized clinical utility.  Although the transmission effects were modest and did not ultimately shift R0 below 1, reductions of 10-20% in R0 as we observed may nevertheless be meaningful in a landscape in which resulting CDI-associated morbidity and mortality are high.  These reductions may also be significant enough to reduce the probability of outbreaks in hospital settings, which is an important future investigation.  Ultimately, understanding the transmission effects of fecal transplant is timely, because widespread adoption of fecal transplantation has been hampered by practical and legal constraints.  Our evidence may have relevance to regulatory bodies and hospitals as they consider further uptake of fecal transplantation as a treatment alternative in CDI patients. 
 output: pdf_document
 documentclass: article
 header-includes:
@@ -562,7 +562,7 @@ since 2011 as environmental disinfection technologies have advanced.
 Time constraints prevented this model addition, but future model
 development that includes these pathways would be relevant to capturing
 both advances in disinfection and treatment (fecal transplant) since
-original publication that affect *C. difficile* transmission dynamics.
+original that affect *C. difficile* transmission dynamics.
 
 As *Clostridium difficile* continues to exert a significant public
 health and economic toll in the United States, better understanding the
